# Apresentacao-Energia-Livre

./: Layout_CEMIG copy - Copia.txt  Layout_CEMIG copy.html  Layout_CEMIG.html  hello.py  main.py  minimal.html  new_file.html  packages.txt  pyproject.toml  requirements.txt  setup.py  somehting.ipynb  temp_rendered.html  test.py  test_html_generation.py  trying.ipynb
DBases/: Contatos_Agentes.parquet  aneel_database.db  last_updated.txt  tarifas.parquet
Proposta PPT/: page 5.html
Temp_ppt/: page 5 - Copia.txt  page 7 - Copia.txt
app/: business_logic.py  config.py  ui_components.py
modules/: calculations.py  data_utils.py  db_utils.py  pdf_builder.py  plot_generator.py  proposal_generator.py  ui_components.py
utils/: data_utils.py  plot_generator.py
