[project]
name = "apresentacao-energia-livre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.43.2",
    "weasyprint>=64.1",
]
